--- a/details.html
+++ b/details.html
@@ -9,4 +9,5 @@
   <ul> <li>Phone Number: +91 6379356148</li>
     <li>Email: samrita.13884@gmail.com</li>
     <li><a href="https://www.linkedin.com/in/maria-samrita-a-2a9320232/">Linkedin</a></li></ul>
+    <li><a href="http://github.com/MariaSamrita">Github</a></li></ul>
     <hr>
